<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.devs.raghav.lifi.SendActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/TitleText"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:elevation="2dp"
            android:text="@string/enter_the_text_to_send"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:ignore="UnusedAttribute" />

        <TextView
            android:id="@+id/Empty"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/empty"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <EditText
            android:id="@+id/Text"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:ems="10"
            android:inputType="text"
            android:maxLines="1" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/emptySpace"
            tools:text="@string/empty" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/BackButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/back"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/SendButtonID"
                android:layout_width="202dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.20"
                tools:text="@string/send"
                tools:ignore="ButtonStyle" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
